Fix for delete icons not aligning with new character fab

--- a/ttrpg/src/app/components/main/startscreen/startscreen.component.sass
+++ b/ttrpg/src/app/components/main/startscreen/startscreen.component.sass
@@ -6,3 +6,6 @@
 .listElements
 	max-height: calc( 100vh - 16rem )
 	overflow: auto
+
+.miniFabPadding
+	padding: 4px
